# voxelizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: .gitignore  README.md  kawada-hironx.stl
examples/: CMakeLists.txt  check_side.cpp  collision_checker.cpp  collision_checker.h  read_meta.cpp  read_rawvox.cpp
src/: CMakeLists.txt  Commons.cpp  Commons.h  STLImportTest.cpp  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  TriBox.cpp  TriBox.h  Voxelizer.cpp  Voxelizer.h  commons.cpp  commons.h  general_test.cpp  mujin.cpp  ray_caster.cpp  ray_caster.h  threadPool.cpp  threadPool.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  triBox.cpp  triBox.h  tri_box.cpp  voxelizer.cpp  voxelizer.h  voxelizerMain.cpp  voxelizer_main.cpp
test/: CMakeLists.txt  TestVox.cpp  collisionChecker.cpp  collisionChecker.h  collision_checker.cpp  collision_checker.h  test_voxel_meta.cpp
